tests/error/stray.gw
// [contains] stray in program
**µ
